# crucible

./: .gitignore  CHAOS_IMPLEMENTATION_PLAN.md  CLAUDE.md  DESIGN_CONTEXT.md  DESIGN_CONTEXT_CHAOS.md  DESIGN_CONTEXT_MCP.md  MCP_IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
control_plane/: Dockerfile  pyproject.toml
control_plane/src/control_plane/: config.py  main.py  models.py  utils.py
control_plane/src/control_plane/routers/: fixtures.py  sut.py  telemetry.py  test_plans.py  test_runs.py  test_runs_v1.py  workloads.py
control_plane/src/control_plane/schemas/: test_plan.py
control_plane/src/control_plane/services/: db.py  dispatcher.py  s3_broker.py
control_plane/tests/: conftest.py  test_fixtures.py  test_sut.py  test_telemetry.py  test_test_plans.py  test_test_runs.py  test_test_runs_v1.py  test_utils.py  test_workloads.py
helm/crucible/: Chart.yaml  values-eks.yaml  values.yaml
helm/crucible/templates/: NOTES.txt  _helpers.tpl  clusterrole-chaos.yaml  configmap-postgres-init.yaml  configmap-prometheus.yaml  configmap-rabbitmq.yaml  deployment-control-plane.yaml  deployment-mcp.yaml  deployment-prometheus.yaml  deployment-worker.yaml  ingress-mcp.yaml  ingress.yaml  job-minio-init.yaml  pvc-prometheus.yaml  secret.yaml  service-control-plane.yaml  (+9 more)
infrastructure/: docker-compose.yml
infrastructure/config/: prometheus.yml
lib/: pyproject.toml
lib/src/crucible_lib/: net.py
lib/src/crucible_lib/lease_manager/: manager.py
lib/src/crucible_lib/schemas/: __init__.py  cluster_spec.py  test_plan.py  workload.py
lib/tests/: test_chaos_schema.py  test_cluster_spec.py  test_net.py  test_test_plan.py  test_workload.py
mcp_server/: Dockerfile  pyproject.toml
mcp_server/src/crucible_mcp/: client.py  config.py  errors.py  resources.py  server.py  tools.py
mcp_server/tests/: conftest.py  test_client.py  test_errors.py  test_resources.py  test_server.py  test_tools.py
tests/: conftest.py  setup_tpch_fixtures.py  start_e2e_env.sh  test_e2e_api.py
tests/plans/: e2e_mysql.yaml  e2e_mysql_internode.yaml  tpch_doris.yaml
tests/workloads/: e2e_simple.sql  tpch_queries.sql
worker/: Dockerfile  pyproject.toml
worker/src/worker/: celery_app.py  config.py  db.py  metrics_collector.py
worker/src/worker/chaos_injector/: __init__.py  base.py  chaosd_engine.py  k8s_engine.py  scheduler.py
worker/src/worker/driver_manager/: k6_manager.py
worker/src/worker/drivers/: generic_sql_driver.js
worker/src/worker/fixture_loader/: base.py
worker/src/worker/fixture_loader/strategies/: __init__.py  standard.py  streaming.py  zero_download.py
worker/src/worker/orchestrator/: taurus.py
worker/src/worker/tasks/: dispatcher.py  executor.py  master.py  runner.py
worker/tests/: test_chaos_engines.py  test_chaos_scheduler.py  test_db.py  test_dispatcher.py  test_dispatcher_chaos.py  test_executor.py  test_k6_manager.py  test_metrics_collector.py  test_zero_download.py
(+2 files in other folders)
