[project]
name = "crucible-control-plane"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "boto3>=1.35.0",
    "celery[rabbitmq]>=5.4.0",
    "pyyaml>=6.0.2",
    "crucible-lib",
]

[tool.uv.sources]
crucible-lib = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/control_plane"]
